objects/pw_cc__ZipCode__c.object
<CustomObject>
    <fields>
        <fullName>pw_cc__CBSA__c</fullName>
        <inlineHelpText>Core Based Statistical Area Number.</inlineHelpText>
        <label>CBSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__CSA__c</fullName>
        <inlineHelpText>Core Statistical Area. This area is a group of MSA&apos;s combined into a population core area.</inlineHelpText>
        <label>CSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Counties__c</fullName>
        <inlineHelpText>If this ZIP crosses county lines then this field contains a comma separated list of counties, otherwise it stores just a single county</inlineHelpText>
        <label>Counties</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__Decommissioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decommissioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__LocationType__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acceptable</fullName>
                    <default>true</default>
                    <label>Acceptable</label>
                </value>
                <value>
                    <fullName>Not Acceptable</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__MSA__c</fullName>
        <inlineHelpText>Metropolitan Statistical Area number assigned by Census.</inlineHelpText>
        <label>MSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__PMSA__c</fullName>
        <inlineHelpText>Primary Metropolitan Statistical Area Number.</inlineHelpText>
        <label>PMSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__PrimaryCounty__c</fullName>
        <inlineHelpText>The primary county this ZIP Code resides within</inlineHelpText>
        <label>Primary County</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__State__c</fullName>
        <label>State</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pw_cc__TimeZone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The time zone this Zip Code covers (where data is available)</inlineHelpText>
        <label>Time Zone</label>
        <referenceTo>pw_cc__TimeZone__c</referenceTo>
        <relationshipLabel>ZIP Codes</relationshipLabel>
        <relationshipName>ZipCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeType__c</fullName>
        <label>ZIP Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>PO BOX</fullName>
                </value>
                <value>
                    <fullName>Unique</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCoversMultipleCounties__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag indicating whether this ZIP Code crosses county lines.</inlineHelpText>
        <label>Zip Covers Multiple Counties</label>
        <type>Checkbox</type>
    </fields>
    <label>ZIP Code</label>
    <listViews>
        <fullName>pw_cc__All</fullName>
        <columns>NAME</columns>
        <columns>pw_cc__City__c</columns>
        <columns>pw_cc__State__c</columns>
        <columns>pw_cc__ZipCodeType__c</columns>
        <columns>pw_cc__LocationType__c</columns>
        <columns>pw_cc__TimeZone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZIP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZIP Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>